# powerxrd

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RIETVELD_CLASSIC.md  hello_rietveld_long.py  hello_rietveld_workflow.py  information.md  literature.md  pyproject.toml  refine.py  requirements.in  requirements.txt  requirements_docs.in  setup.py
.github/: FUNDING.yml
docs/: requirements.in
docs/source/: api.rst  conf.py  index.rst  rietveld.rst  usage.rst
examples/: hello_rietveld_long.py  hello_rietveld_workflow.py  hello_structure.py
lib/: __init__.py
literature/: rietveld-refinement
powerxrd/: __init__.py  chart.py  data.py  main.py  model.py  module.py  refine.py  rietveld.py  structure.py  template_rietveld.py  utilities.py  workflow.py
powerxrd/lattice/: __init__.py  base.py  cubic.py  registry.py
synthetic-data/: README.md  sample0.csv  sample0.xy  sample1.csv  sample1.xy  sample2.csv  sample3.csv  sample4.csv
tests/: conftest.py  test_chart.py  test_data.py  test_module.py  test_refine.py  test_utilities.py
