[tool.poetry]
name = "powerxrd"
version = "3.0.0"
description = "Python tools for powder XRD data analysis – now with Rietveld refinement support."
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrewrgarcia/powerxrd"
repository = "https://github.com/andrewrgarcia/powerxrd"
keywords = ["XRD", "Rietveld", "materials science", "diffraction", "crystallography"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26"
pandas = "^2.2.2"
scipy = "^1.10.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
