[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerxrd"
version = "4.0.0"
description = "Modular Python tools for powder XRD analysis with extensible Rietveld refinement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Andrew Garcia", email = "garcia.gtr@gmail.com" }
]

keywords = [
    "XRD",
    "Rietveld",
    "materials science",
    "diffraction",
    "crystallography"
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.10",
    "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/andrewrgarcia/powerxrd"
Repository = "https://github.com/andrewrgarcia/powerxrd"
Documentation = "https://powerxrd.readthedocs.io"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401", "E741", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "twine"
]